Add site param in yaml header
This meta tag is required to push the published book to bookdown.org.

See https://github.com/rstudio/bookdown/issues/68

--- a/index.Rmd
+++ b/index.Rmd
@@ -17,6 +17,7 @@ output:
         css: toc.css
 documentclass: book
 description: "Backtesting strategies with R"
+site: bookdown::bookdown_site
 ---
 
 ```{r index-comments, eval = FALSE, echo = FALSE}
